# DeFiGym-agentbeats

./: .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.purple  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: publish.yml
scenarios/defigym/: scenario.toml
src/: agent.py  executor.py  server.py
src/defigym/: __init__.py  models.py  task_generator.py  validator.py
src/purple/: __init__.py  agent.py  executor.py  server.py
